scss/partials/_topic.scss
div.topic-list {

  div.topic {
    margin: 0px;
    margin-top: 5px;
    padding: 0px;
    height: 100%;
    background-color: #FCFCFC;
    border-radius: 2px;
    text-align: left;
    box-shadow: 1px 2px 2px 0 rgba(0, 0, 0, 0.2), inset 0 1px 3px 0 #ffffff;

    @include big_web(){
      cursor: pointer;
    }

    div.topic-anim{
      position: relative;
      height: auto;

      & > div.topic-tr-as-of {
        position: absolute;
        top: 0;
        left: 0;
      }

      & > div {
        height: auto;

        div.topic-internal{

          & > div{
            padding: 0px 20px;
          }

          div.topic-header {

            .topic-image {
              width: 30px;
              height: 30px;
              float: left;
            }

            svg path, svg polygon {
              fill: #8b8a8a;
            }
          }

          div.card-header{
            margin: 0px;
            padding: 0px;
            width: 100%;
            max-height: 196px;
            overflow: hidden;
            position: relative;

            img {
              width:100%;
              max-height:100%;
            }

            div.section-container {
              margin: 10px;
            }

            div.gradient {
              position:absolute;
              z-index:2;
              right:0; bottom:0; left:0px;
              width: 100%;
              height: 20px; /* adjust it to your needs */
              background: url(data:image/svg+xml;base64,alotofcodehere);
              background: -moz-linear-gradient(top,  rgba(255,255,255,0) 0%, rgba(255,255,255,1) 70%);
              background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(255,255,255,0)), color-stop(70%,rgba(255,255,255,1)));
              background: -webkit-linear-gradient(top,  rgba(255,255,255,0) 0%,rgba(255,255,255,1) 70%);
              background: -o-linear-gradient(top,  rgba(255,255,255,0) 0%,rgba(255,255,255,1) 70%);
              background: -ms-linear-gradient(top,  rgba(255,255,255,0) 0%,rgba(255,255,255,1) 70%);
              background: linear-gradient(to bottom,  rgba(255,255,255,0) 0%,rgba(255,255,255,1) 70%);
              pointer-events: none;
            }
          }

          div.topic-title {
            padding-top: 10px;
            opacity: 0.5;
            font-weight: 700;
            font-size: 12px;
            line-height: 1.5;
            letter-spacing: 1px;
            color: $oc_gray_5;
            text-transform: uppercase;
          }

          div.topic-headline {
            padding-top: 15px;
            font-family: $oc_headers_font;
            font-size: 20px;
            line-height: 1.2;
            color: $oc_gray_5;
          }

          div.topic-body {
            color: #4e5a6b;
            margin-top: 10px;
            margin-bottom: 20px;
            max-height: 31px;
            overflow: hidden;

            *{
              font-family: $oc_headers_font;
              font-size: 12px;
              line-height: 1.3;
              overflow: hidden;
              text-overflow: ellipsis;
              white-space: nowrap;
            }

            img{
              display: none;
            }
          }

          div.topic-more {
            margin-top: 10px;
            text-align: center;

            img {
              width: 30px;
              height: 30px;
            }

            i {
              font-size: 6px;
              margin-left: 3px;
              line-height: 1;
              font-weight: 600;
              color: #bababa;
            }
          }

          div.topic-date {
            font-size: 12px;
            font-style: italic;
            color: #A6A6A3; /* gray */

            label {
              margin: 0px;
              font-weight: normal;
            }
          }

          div.body-navigation-container{
            @include mobile(){
              padding: 0px;
            }

            @include big_web(){
              padding: 0px 22px;
            }

            &.close{
              overflow: hidden;
              height: 0px;
            }

            div.topic-body-inner {
              padding: 0px 22px;
            }

            @include topic_navigation($x_padding: 22px);
          }
        }
      }
    }
  }
}

